--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "tdd": "npm run test -- --reporter min --watch",
     "lint": "node ./node_modules/tslint/bin/tslint 'src/**/*.ts{,x}' --format verbose",
     "build": "rm -rf ./lib && node ./node_modules/typescript/bin/tsc",
+    "build:watch": "npm run build -- --watch",
     "prepublish": "npm test && npm run lint && npm run build"
   },
   "dependencies": {},
