--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "build:watch": "npm run build -- --watch",
     "prepublish": "npm test && npm run lint && npm run build"
   },
-  "dependencies": {},
+  "dependencies": {
+    "express": "^4.14.0"
+  },
   "devDependencies": {
     "@types/chai": "^3.4.34",
     "@types/mocha": "^2.2.32",
@@ -22,6 +24,7 @@
     "mocha": "^3.0.2",
     "ts-node": "^1.4.1",
     "tslint": "^3.15.1",
+    "tslint-react": "^1.0.0",
     "typescript": "^2.0.3"
   },
   "repository": {
