--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prepublish": "npm test && npm run lint && npm run build"
   },
   "dependencies": {
+    "@types/express": "^4.0.33",
     "express": "^4.14.0"
   },
   "devDependencies": {
